translation service achieved
translation service done, minor problem tackling

--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -26,6 +26,7 @@
           <option value="bn">Bengali</option>
           <option value="hi">Hindi</option>
           <option value="ja">Japanese</option>
+          <option value="zh">Chinese</option>
         </select>
       </div>
 
