--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,15 @@
 
 <ul>
   <li><a routerLink="/todo" routerLinkActive="active" ariaCurrentWhenActive="page">todo</a></li>
-  <li><a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">login</a></li>
+  <li><a routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">Register</a></li>
+  <li class="nav-item">
+    <div *ngIf="isUserLoggedIn">
+      <a class="nav-link" routerLink="/logout">Logout</a>
+    </div>
+ <a class="nav-link" routerLink="/login">Login</a>
+ 
+  </li>
   <router-outlet></router-outlet>
+
 </ul>
 
