--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,15 +1,26 @@
-<h5><u><i>Login Form using Angular material!!</i></u></h5>
-
-<form class="example-form">
-  <mat-form-field class="example-full-width" appearance="fill">
-    <mat-label>User Name</mat-label>
-    <input matInput placeholder="Enter your name" name="usename"
-           [(ngModel)]="username">
-  </mat-form-field>
-  <mat-form-field class="example-full-width" appearance="fill">
-    <mat-label>Password</mat-label>
-    <input matInput placeholder="Enter your password" value="" name="password" type="password" [(ngModel)]="password">
-  </mat-form-field>
-  <button mat-raised-button color="primary" (click)="submit()">Submit</button>
-  <span *ngIf="show"> <button mat-button color="accent">Login success !!</button></span>
-</form>
+<!-- Page Content -->
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12 text-center" style="padding-top: 20px;">
+      <div class="container box" style="margin-top: 10px; padding-left: 0px; padding-right: 0px;">
+        <div class="row">
+          <div class="col-12" style="text-align: center;">
+            <form [formGroup]="formData" (ngSubmit)="onClickSubmit(formData.value)"
+                  class="form-signin">
+              <h2 class="form-signin-heading">Please sign in</h2>
+              <label for="inputEmail" class="sr-only">User Name</label>
+              <input type="text" id="username" class="form-control"
+                     formControlName="userName" placeholder="Username" required autofocus>
+              <br />
+              <label for="inputPassword" class="sr-only">Password</label>
+              <input type="password" id="inputPassword" class="form-control"
+                     formControlName="password" placeholder="Password" required>
+              <br />
+              <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
