--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -9,7 +9,7 @@
     <!-- These are here just to show the structure of the list items -->
     <!-- List items should get the class `editing` when editing and `completed` when marked as completed -->
 
-    <li *ngFor="let todo of todoService.todoList | todoFilter:status"
+    <li *ngFor="let todo of getFilter()"
         [ngClass]="{
           completed: todo.completed,
           editing: todo.editing
@@ -29,7 +29,6 @@
           <option value="zh">Chinese</option>
         </select>
       </div>
-
       <input *ngIf="todo.editing"
              #editingInput
              class="edit" type="text" appAutofocus
@@ -39,6 +38,7 @@
              (keyup.escape)="cancelEditing(todo)">
     </li>
   </ul>
+  
 </section>
 
 <!-- This footer should be hidden by default and shown when there are todos -->
@@ -47,18 +47,6 @@
   <span class="todo-count">
     <strong>{{ todoService.uncompletedCount }}</strong> {{ todoService.uncompletedCount === 1 ? 'item' : 'items' }} left
   </span>
-  <!-- Remove this if you don't implement routing -->
-  <ul class="filters">
-    <li>
-      <a [ngClass]="{ selected: status === '' }" routerLink="/">All</a>
-    </li>
-    <li>
-      <a [ngClass]="{ selected: status === 'active' }" routerLink="/active">Active</a>
-    </li>
-    <li>
-      <a [ngClass]="{ selected: status === 'completed' }" routerLink="/completed">Completed</a>
-    </li>
-  </ul>
   <!-- Hidden if no completed items are left ↓ -->
   <button *ngIf="todoService.uncompletedCount !== todoService.todoList.length"
           (click)="clearCompletedTodos()"
