all function done
all function done with commenting, upload to cloud in progress

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,6 @@
 <header class="header">
   <h1>todos</h1>
+  <!--Getting input from user-->
   <div class="form-group">
     <input #content class="new-todo" placeholder="What needs to be done?" autofocus
            [(ngModel)]="todoContent"
