--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,5 @@
-<h5><u><i>Register Form using Angular material!!</i></u></h5>
-
-<form class="example-form">
+<!-- register form for user to sign up-->
+<form class="form-register">
   <mat-form-field class="example-full-width" appearance="fill">
     <mat-label>User Name</mat-label>
     <input matInput placeholder="Enter your name" name="usename"
@@ -10,8 +9,8 @@
     <mat-label>Password</mat-label>
     <input matInput placeholder="Enter your password" value="" name="password" type="password" [(ngModel)]="password">
   </mat-form-field>
-  <button mat-raised-button color="primary" (click)="register()">Submit</button>
-  <span *ngIf="show"> <button mat-button color="accent">Login success !!</button></span>
+  <br />
+  <button class="button-34" mat-raised-button color="primary" (click)="register()">Submit</button>
 </form>
 
 
