--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
-
-<ul>
-  <li><a routerLink="/todo" routerLinkActive="active" ariaCurrentWhenActive="page">todo</a></li>
-  <li><a routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">Register</a></li>
-  <li class="nav-item">
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <!-- Container wrapper -->
+  <div class="container" fxLayout="column" fxLayoutGap="50px">
+    <!-- Navbar brand -->
+    <a routerLink="/register" routerLinkActive="active" ariaCurrentWhenActive="page">Register</a>
+    <div *ngIf="isUserLoggedIn">
+      <a routerLink="/todo" routerLinkActive="active" ariaCurrentWhenActive="page">Todo</a>
+    </div>
     <div *ngIf="isUserLoggedIn; else isLogOut">
       <a class="nav-link" (click)="reloadCurrent()" routerLink="/logout">Logout</a>
     </div>
@@ -12,9 +16,10 @@
     <ng-template #isLogOut>
       <a class="nav-link" routerLink="/login">Login</a>
     </ng-template>
-  </li>
+    <!-- Collapsible wrapper -->
+  </div>
+ </nav>
+<router-outlet></router-outlet>
 
-  <router-outlet></router-outlet>
-
-</ul>
+ 
 
