--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,26 +1,36 @@
 <!-- Page Content -->
 <div class="container">
-  <div class="row">
-    <div class="col-lg-12 text-center" style="padding-top: 20px;">
-      <div class="container box" style="margin-top: 10px; padding-left: 0px; padding-right: 0px;">
-        <div class="row">
-          <div class="col-12" style="text-align: center;">
-            <form [formGroup]="formData" (ngSubmit)="onClickSubmit(formData.value)"
-                  class="form-signin">
-              <h2 class="form-signin-heading">Please sign in</h2>
-              <label for="inputEmail" class="sr-only">User Name</label>
-              <input type="text" id="username" class="form-control"
-                     formControlName="userName" placeholder="Username" required autofocus>
-              <br />
-              <label for="inputPassword" class="sr-only">Password</label>
-              <input type="password" id="inputPassword" class="form-control"
-                     formControlName="password" placeholder="Password" required>
-              <br />
-              <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-            </form>
-          </div>
+  <div class="screen">
+    <!--Login form for user-->
+    <div class="screen__content" style="padding-top: 20px;">
+      <div class="row">
+        <div class="login__field" style="text-align: center;">
+          <form [formGroup]="formData" (ngSubmit)="onClickSubmit(formData.value)"
+                class="login">
+            <h1 class="form-submit">Please sign in</h1>
+            <br />
+            <label for="inputName" class="login__field">User Name:</label>
+            <input type="text" id="username" class="login__input"
+                   formControlName="userName" placeholder="User name / Email" required autofocus>
+            <br />
+            <label for="inputPassword" class="sr-only">Password :</label>
+            <input type="password" id="inputPassword" class="login_input"
+                   formControlName="password" placeholder="Password" required>
+            <br />
+            <button class="button login__submit" type="submit">
+              <span class="button__text">Log In Now</span>
+            </button>
+          </form>
         </div>
       </div>
     </div>
+    <!--CSS backgroud-->
+    <div class="screen__background">
+      <span class="screen__background__shape screen__background__shape4"></span>
+      <span class="screen__background__shape screen__background__shape3"></span>
+      <span class="screen__background__shape screen__background__shape2"></span>
+      <span class="screen__background__shape screen__background__shape1"></span>
+    </div>
   </div>
 </div>
+
